# m5stamp-c3dev

./: .editorconfig  .gitignore  .gitmodules  LICENSE  README.md  nvs_partition.csv  partitions.csv  sdkconfig  sdkconfig.old
.github/workflows/: build.yml
components/freetype/: CMakeLists.txt
components/freetype/src/: freetype_helper.c  freetype_helper.h
components/lcd/: CMakeLists.txt
components/led/: CMakeLists.txt
components/lwgps/: CMakeLists.txt
components/tinygps/: CMakeLists.txt
components/tinypng/: CMakeLists.txt
components/ultrasonic/: CMakeLists.txt
components/unitenv/: CMakeLists.txt
components/unitir/: CMakeLists.txt
components/wasm/: CMakeLists.txt  linker.lf
docs/asclock/: app.722072a8.wasm  clockenv.wasm  index.2911557e.css  index.2911557e.css.map  index.ab1454db.js  index.ab1454db.js.map  index.html
docs/asgps/: gpsgsv.wasm  index.2911557e.css.map  index.ab1454db.js  index.ab1454db.js.map  index.html
font/: range.sh
main/: CMakeLists.txt  Kconfig.projbuild  c3dev_board.h  hello_world_main.cpp  main.cpp  test_digit_gpio1819.cpp  test_digit_gpio1819.h  test_freetype.cpp  test_freetype.h  test_i2c_gpio1819.cpp  test_i2c_gpio1819.h  test_nvs_wifi.cpp  test_nvs_wifi.h  test_tinypng.cpp  test_tinypng.h  test_uart_gpio1819.cpp  test_uart_gpio1819.h  test_wasm3.c  test_wasm3.cpp  test_wasm3.h  test_wasm3_clockenv.cpp  test_wasm3_gpsgsv.cpp  test_wasm3_gpsgsv.h  test_wasm3_imu6886.cpp  test_wasm3_imu6886.h
pcb/fg06-c3dev-revb/: fg-series.kicad_sym  fg06-c3dev-revb.kicad_pcb  fg06-c3dev-revb.kicad_prl  fg06-c3dev-revb.kicad_pro  fg06-c3dev-revb.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
pcb/fg06-c3dev-revb/fg-series.pretty/: AE-USB2.0-TYPE-C.kicad_mod  AJ-1780.kicad_mod  BNX016-01.kicad_mod  KMR-1.8SPI.kicad_mod  M5STAMP-C3.kicad_mod  MBUS.kicad_mod
pcb/fg06-c3dev-revb/fg-series.vrml2/: AJ-1780.x3d  BNX016-01.x3d  KMR-18.x3d  MBUS.x3d
pcb/fg06-c3dev-revb/gerber/: fg06-c3dev-revb-B_Cu.gbl  fg06-c3dev-revb-B_Mask.gbs  fg06-c3dev-revb-B_Paste.gbp  fg06-c3dev-revb-B_Silkscreen.gbo  fg06-c3dev-revb-Edge_Cuts.gm1  fg06-c3dev-revb-F_Cu.gtl  fg06-c3dev-revb-F_Mask.gts  fg06-c3dev-revb-F_Paste.gtp  fg06-c3dev-revb-F_Silkscreen.gto  fg06-c3dev-revb-job.gbrjob  fg06-c3dev-revb.drl
resources/: range.sh
resources/wasm/: app.wasm  clockenv.wasm  gpsgsv.wasm  gpspvs.wasm  imu6886.wasm
wasm/: .parcelrc  package-lock.json  package.json
wasm/clockenv/: README.md  package-lock.json  package.json  tsconfig.json
wasm/clockenv/src/: c3dev.ts  main.ts
wasm/clockenv/web/: main.js
wasm/gpsgsv/: Cargo.toml  package-lock.json  package.json
wasm/gpsgsv/src/: c3dev.ts  main.rs  main.ts
wasm/gpsgsv/web/: index.html  main.js
wasm/imu6886/: package-lock.json  package.json
wasm/imu6886/src/: c3dev.ts  main.ts
wasm/imu6886/web/: index.html  main.js
wasm/src/: c3dev.ts  main.ts
wasm/web/: index.html  main.js  style.css
